swagger add fixed and tested for blog
